test/arrays/bradc/promote-shortcircuit.good
promote-shortcircuit.chpl:13: error: cannot promote short-circuiting && operator
